# parconc

./: .gitignore  CHANGELOG.md  README.md  parconc.cabal
app/: rpar.hs  rsa.hs
app/kmeans/: KMeansCore.hi  Makefile
