cabal-version:      3.0
name:               parconc
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             David Sáenz
maintainer:         dsaenz@bebanjo.com
category:           Concurrency
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:  sudoku17.1000.txt
                     sudoku17.16000.txt
                     sudoku17.49151.txt

common warnings
    ghc-options: -Wall

common deps
  default-language: Haskell2010
  hs-source-dirs: app
  build-depends: base ^>=4.17.2.1
               , parallel
               , time
               , array
               , deepseq

executable rpar
  import: deps
  main-is: rpar.hs
  ghc-options: -threaded

executable sudoku1
  import: deps
  main-is: sudoku1.hs
  other-modules: Sudoku

executable sudoku2
  import: deps
  main-is: sudoku2.hs
  other-modules: Sudoku
  ghc-options: -O2 -threaded

executable sudoku3
  import: deps
  main-is: sudoku3.hs
  other-modules: Sudoku
  ghc-options: -threaded

executable sudoku4
  import: deps
  main-is: sudoku4.hs
  other-modules: Sudoku
  ghc-options: -threaded

executable sudoku5
  import: deps
  main-is: sudoku5.hs
  other-modules: Sudoku
  ghc-options: -threaded
