cabal-version:      3.0
name:               parconc
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             David Sáenz
maintainer:         dsaenz@bebanjo.com
category:           Concurrency
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:  sudoku17.1000.txt
                     sudoku17.16000.txt
                     sudoku17.49151.txt

common warnings
    ghc-options: -Wall

common deps
  default-language: Haskell2010
  hs-source-dirs: app
  build-depends: base ^>=4.17.2.1
               , parallel
               , time
               , array
               , deepseq

executable rpar
  import: deps
  main-is: rpar.hs
  ghc-options: -threaded

executable strat
  import: deps
  main-is: strat.hs
  ghc-options: -threaded

executable strat2
  import: deps
  main-is: strat2.hs
  ghc-options: -threaded

executable strat3
  import: deps
  main-is: strat3.hs
  ghc-options: -threaded

executable sudoku1
  import: deps
  main-is: sudoku1.hs
  other-modules: Sudoku

executable sudoku2
  import: deps
  main-is: sudoku2.hs
  other-modules: Sudoku
  ghc-options: -threaded

executable sudoku3
  import: deps
  main-is: sudoku3.hs
  other-modules: Sudoku
  ghc-options: -threaded

executable sudoku4
  import: deps
  main-is: sudoku4.hs
  other-modules: Sudoku
  ghc-options: -threaded

executable sudoku5
  import: deps
  main-is: sudoku5.hs
  other-modules: Sudoku
  ghc-options: -threaded

executable GenSamples
  import: deps
  hs-source-dirs: app/kmeans
  main-is: GenSamples.hs
  other-modules: KMeansCore
  build-depends: normaldistribution
               , bytestring
               , binary
               , random
  ghc-options: -O2

executable kmeans
  import: deps
  hs-source-dirs: app/kmeans
  main-is: kmeans.hs
  other-modules: KMeansCore
  ghc-options: -threaded
  build-depends: bytestring
               , binary
               , vector
               , monad-par

executable rsa
  import: deps
  main-is: rsa.hs
  build-depends: bytestring
               , deepseq

executable rsa1
  import: deps
  main-is: rsa1.hs
  ghc-options: -threaded
  build-depends: bytestring
               , deepseq

executable rsa2
  import: deps
  main-is: rsa2.hs
  ghc-options: -threaded
  build-depends: bytestring
               , deepseq

executable rsa-pipeline
  import: deps
  main-is: rsa-pipeline.hs
  other-modules: Stream
  build-depends: bytestring
               , deepseq
               , monad-par

executable parmonad
  import: deps
  main-is: parmonad.hs
  ghc-options: -threaded
  build-depends: monad-par

executable fwsparse
  import: deps
  main-is: fwsparse.hs
  other-modules: SparseGraph MapCompat
  hs-source-dirs: app/fwsparse
  build-depends: random
               , containers

executable fwsparse1
  import: deps
  main-is: fwsparse1.hs
  other-modules: SparseGraph MapCompat
  hs-source-dirs: app/fwsparse
  ghc-options: -threaded
  build-depends: random
               , containers
